# Data-Engineering-2.0

./: .env.example  .gitignore  pyproject.toml
configs/: dataset_full.yaml  full.yaml  level1_experiment.yaml  level1_items.txt  midterm.yaml  pilot.yaml  wiki_extension.yaml  wiki_extension_all.txt  wiki_extension_phaseA.yaml  wiki_extension_phaseB.yaml
docs/: finetune.md  paper_outline.md  pipeline.md
notebooks/: data_inspection.ipynb
prompts/: pdtb_sense_definitions.json
scripts/: analyze_results.py  run_level1.py  run_prep_smoke.py  run_wiki_extension_resilient.sh  test_api_keys.py
scripts/finetune/: evaluate.py  prepare_data.py  pretrain_data.py  run_all.sh  run_pretrain_and_finetune.sh  summarize.py  train.py
src/: aggregate.py  analyze.py  cli.py  config.py  generate.py  llm_client.py  pipeline.py  prep.py  prompts.py  schemas.py  validate.py
tests/: conftest.py  test_aggregate.py  test_generate.py  test_prep.py  test_prompts.py  test_schemas.py  test_validate.py
