[project]
name = "evade-discogem"
version = "0.1.0"
description = "EVADE framework adapted for commission-error detection on DiscoGeM 1.0"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "pyarrow>=14.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "openai>=1.0",
    "anthropic>=0.30",
    "mistralai>=1.0",
    "httpx>=0.27",
    "tenacity>=8.0",
    "structlog>=24.0",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "scipy>=1.12",
    "numpy>=1.26",
    "jupyter>=1.0",
    "ipykernel>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
evade = "src.cli:main"
